<resources>
	<string name="app_name">Recipio</string>
	<string name="system_language">en</string>
	<string name="global_permissions_are_needed">I can\'t do this without these permissions &#128549;</string>
	<string name="global_privacy_policy_url">https://www.freeprivacypolicy.com/live/3e69b4ef-6afb-4887-8fa4-5f45ced9d309</string>
	<string name="error_authentication">You have been logged off from the server</string>
	<string name="error_no_network_connection">Connection to server has failed. Please check your internet connection ad try again.</string>
	<string name="error_unknown_try_later">The action could not be completed because an unknown error occurred. Please try again later.</string>
	<string name="error_validation">Validation error. Please try again later.</string>
	<string name="error_bad_email_or_password">Incorrect email or password</string>
	<string name="error_unknown">Oops, something went wrong</string>
	<string name="speech_to_text_hint">I\'m listening</string>
	<string name="speech_to_text_error">Your device does\'t support speech to text</string>
	<string name="speech_to_text_no_results">Sorry, i don\'t understand.</string>
	<string name="action_button_voice_input">Voice input</string>
	<string name="action_button_scan_with_ai">Scan with AI</string>
	<string name="onboarding_1_discover_by_query">Find recipes by query…</string>
	<string name="onboarding_2_discover_by_ingredients">…or by ingredients</string>
	<string name="onboarding_3_recipe_detail">See detail of found recipe</string>
	<string name="onboarding_4_create_recipe">Create your own recipe</string>
	<string name="login_welcome">Welcome in</string>
	<string name="login_button_sign_in_with_google">Sign in with Google</string>
	<string name="login_button_dot_divider">·</string>
	<string name="login_button_about_app">About Recipio</string>
	<string name="login_button_privacy_policy">Privacy policy</string>
	<string name="about_desc">This application was created as part of the author\'s diploma thesis - Mobile Application for Recommending and Managing Cooking Recipes. Recipe data is downloaded from the Spoonacular Food API service.\n2021 © All rights reserved</string>
	<string name="about_data_source">Data source</string>
	<string name="about_data_source_value">Spoonacular Food API</string>
	<string name="about_data_source_url">https://spoonacular.com/food-api</string>
	<string name="about_diploma_thesis">Diploma thesis</string>
	<string name="about_diploma_thesis_value">vut.fit.thesis/xyz</string>
	<string name="about_diploma_thesis_url">vut.fit.thesis/xyz</string>
	<string name="about_author">Author</string>
	<string name="about_author_value">Andrej Lončík</string>
	<string name="about_author_url">http://andrejloncik.com/</string>
	<string name="about_contact">Contact</string>
	<string name="about_contact_value">andrejloncik@gmail.com</string>
	<string name="about_contact_email">andrejloncik@gmail.com</string>
	<string name="home_title">Home</string>
	<string name="home_label_favourites">Favourites</string>
	<string name="home_label_try_cuisine">Try any of these cuisines</string>
	<string name="home_label_recently_viewed">Recently viewed</string>
	<string name="home_label_own_recipes">Your own recipes</string>
	<string name="home_greeting_morning">Good Morning</string>
	<string name="home_greeting_afternoon">Good Afternoon</string>
	<string name="home_greeting_evening">Good Evening</string>
	<string name="home_discover_by_ingredients">Discover new recipes by entering ingredients</string>
	<string name="home_joke">Gurl, you remind me of a box of chocolates.....(Why?) Cause I want to take your top off.</string>
	<string name="home_favourites_empty">You haven\'t liked any recipe yet.</string>
	<string name="home_own_recipes_empty">You haven\'t created a recipe yet. Create your first one!</string>
	<plurals name="recipe_time_minutes">
		<item quantity="one">%d min</item>
		<item quantity="other">%d mins</item>
	</plurals>
	<plurals name="recipe_ingredients_pieces">
		<item quantity="one">%d ingredient</item>
		<item quantity="other">%d ingredients</item>
	</plurals>
	<string name="discover_example_ingredient_cheese">Cheese</string>
	<string name="discover_example_ingredient_chicken">Chicken</string>
	<string name="discover_example_ingredient_tomato">Tomato</string>
	<string name="discover_example_ingredient_avocado">Avocado</string>
	<string name="discover_example_ingredient_red_onion">Red onion</string>
	<string name="discover_example_ingredient_egg">Egg</string>
	<string name="discover_title">Discover</string>
	<string name="discover_empty_results">No recipes matching your criteria :(</string>
	<string name="discover_search_by_ingredients">Search by ingredients?</string>
	<string name="discover_search_by_ingredients_chip">Try</string>
	<string name="discover_quick_search">Quick search</string>
	<string name="discover_search_bar_placeholder">Search…</string>
	<string name="discover_search_query_placeholder">Pasta…</string>
	<string name="discover_search_recipe_ready_in_minutes">%d mins</string>
	<string name="meal_planner_title">Meal planner</string>
	<string name="meal_planner_monday">MON</string>
	<string name="meal_planner_tuesday">TUE</string>
	<string name="meal_planner_wednesday">WED</string>
	<string name="meal_planner_thursday">THU</string>
	<string name="meal_planner_friday">FRI</string>
	<string name="meal_planner_saturday">SAT</string>
	<string name="meal_planner_sunday">SUN</string>
	<string name="meal_planner_breakfast">Breakfast</string>
	<string name="meal_planner_lunch">Lunch</string>
	<string name="meal_planner_dinner">Dinner</string>
	<string name="meal_planner_bottom_sheet_add_title">Add to meal plan</string>
	<string name="meal_planner_bottom_sheet_remove_title">Remove from meal plan</string>
	<string name="meal_planner_bottom_sheet_favourites">Favourites</string>
	<string name="meal_planner_bottom_sheet_own_recipes">Own recipes</string>
	<string name="meal_planner_bottom_sheet_discover">Discover</string>
	<string name="add_to_meal_planner_title">Select date and time</string>
	<string name="profile_title">Profile</string>
	<string name="profile_your_content">Your content</string>
	<string name="profile_app_content">App content</string>
	<string name="profile_favourites">Favourites</string>
	<string name="profile_own_recipes">Own recipes</string>
	<string name="profile_intolerances">Intolerances</string>
	<string name="profile_diets">Diets</string>
	<string name="profile_settings">Settings</string>
	<string name="profile_about">About</string>
	<string name="profile_logout">Log out</string>
	<string name="camera_permission_title">Your camera is needed</string>
	<string name="camera_permission_subtitle">To recognize the ingredients from the photo, you need to grant permission to access the camera.</string>
	<string name="camera_permission_button">Allow permissions</string>
	<string name="found_ingredients_title">Found ingredients</string>
	<string name="found_ingredients_button_single">Add Ingredient</string>
	<string name="found_ingredients_button_multi">Add Ingredients</string>
	<string name="discover_by_ingredients_title">Ingredients</string>
	<string name="discover_by_ingredients_button">Find recipes</string>
	<string name="discover_by_ingredients_add_ingredient_title">Add ingredient</string>
	<string name="discover_by_ingredients_add_ingredient_placeholder">Chicken</string>
	<string name="discover_by_ingredients_results_title">Found recipes</string>
	<string name="favourites_title">Favourites</string>
	<string name="own_recipes_title">Own recipes</string>
	<string name="allergens_title">Intolerances</string>
	<string name="user_allergens_title">Your intolerances</string>
	<string name="diets_title">Diets</string>
	<string name="user_diets_title">Your diets</string>
	<string name="settings_title">Settings</string>
	<string name="app_version">App version: %s</string>
	<string name="about_title">About</string>
	<string name="privacy_policy_title">Privacy policy</string>
	<string name="help_title">Help</string>
	<string name="nutrition_name_calories">Calories</string>
	<string name="nutrition_name_fat">Fat</string>
	<string name="nutrition_name_carbs">Carbs</string>
	<string name="nutrition_name_protein">Protein</string>
	<string name="nutrition_value_calories">%d cal</string>
	<string name="nutrition_value_fat">%d g</string>
	<string name="nutrition_value_carbs">%d g</string>
	<string name="nutrition_value_protein">%d g</string>
	<string name="button_like_recipe">Like it</string>
	<string name="button_dislike_recipe">Don\'t like it</string>
	<string name="button_add_to_mealplan_recipe">Add to plan</string>
	<string name="label_ingredients">Ingredients</string>
	<string name="label_instructions">Instructions</string>
	<string name="label_intolerances">Intolerances</string>
	<string name="label_cuisines">Cuisines</string>
	<string name="label_diets">Diets</string>
	<string name="label_source">Source</string>
	<string name="bottom_sheet_custom_recipe_delete">Delete recipe</string>
	<string name="create_recipe_button_next">Next</string>
	<string name="create_recipe_button_add_ingredient">Add ingredient</string>
	<string name="create_recipe_button_add_instruction">Add instruction</string>
	<string name="create_recipe_button_save">Save</string>
	<string name="create_recipe_button_finalize">Finalize</string>
	<string name="create_recipe_button_show_recipe">Show recipe</string>
	<string name="create_recipe_button_back_to_home">Back to home</string>
	<string name="create_recipe_placeholder_name">Chicken madras</string>
	<string name="create_recipe_placeholder_ingredient_name">Cheddar</string>
	<string name="create_recipe_placeholder_ingredient_value">250 g</string>
	<string name="create_recipe_placeholder_instruction">Cut the onion into small pieces</string>
	<string name="create_recipe_name_title">What’s the name of your own recipe?</string>
	<string name="create_recipe_time_title">How long does it take to cook your recipe?</string>
	<string name="create_recipe_time_hours">HH</string>
	<string name="create_recipe_time_minutes">MM</string>
	<string name="create_recipe_time_input">Cooking time: %dh %dm</string>
	<string name="create_recipe_ingredients_title">Add ingredients</string>
	<string name="create_recipe_add_ingredient_title">Add ingredients</string>
	<string name="create_recipe_add_ingredient_label_ingredient">Ingredient name</string>
	<string name="create_recipe_add_ingredient_label_measure">Measure</string>
	<string name="create_recipe_instructions_title">Add instructions</string>
	<string name="create_recipe_add_instruction_title">Add instruction</string>
	<string name="create_recipe_add_instruction_label">Instruction</string>
	<string name="create_recipe_photo_title">Add photo of recipe</string>
	<string name="create_recipe_finalize_title">Finalize</string>
	<string name="create_recipe_finalize_add_nutrition">Add nutrition</string>
	<string name="create_recipe_finalize_add_allergens">Add allergens</string>
	<string name="create_recipe_finalize_add_diets">Add diets</string>
	<string name="create_recipe_finalize_nutrition">Nutrition</string>
	<string name="create_recipe_finalize_allergens">Allergens</string>
	<string name="create_recipe_finalize_diets">Diets</string>
	<string name="create_recipe_finalize_add_nutrition_calories">Calories</string>
	<string name="create_recipe_finalize_add_nutrition_proteins">Proteins</string>
	<string name="create_recipe_finalize_add_nutrition_carbs">Carbs</string>
	<string name="create_recipe_finalize_add_nutrition_fat">Fat</string>
	<string name="create_recipe_finalize_add_nutrition_calories_unit">cal</string>
	<string name="create_recipe_finalize_add_nutrition_proteins_unit">g</string>
	<string name="create_recipe_finalize_add_nutrition_carbs_unit">g</string>
	<string name="create_recipe_finalize_add_nutrition_fat_unit">g</string>
	<string name="create_recipe_success_title">Recipe created</string>
</resources>