<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:fitsSystemWindows="true"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ImageView
		android:id="@+id/iconLogo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/ic_logo"
		android:layout_marginTop="180dp"
		android:contentDescription="@string/app_name"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"/>

	<LinearLayout
		android:id="@+id/wrapperLabels"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="40dp"
		app:layout_constraintTop_toBottomOf="@id/iconLogo"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent">

		<TextView
			android:id="@+id/labelWelcome"
			style="@style/TextHeadline1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/gray900"
			android:text="@string/login_welcome"/>

		<TextView
			android:id="@+id/labelAppName"
			style="@style/TextHeadline1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="4dp"
			android:textColor="@color/orange500"
			android:text="@string/app_name"/>
	</LinearLayout>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/buttonSignInGoogle"
		style="@style/ContainedButtonSocials"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login_button_sign_in_with_google"
		android:layout_marginBottom="32dp"
		app:icon="@drawable/ic_google"
		app:layout_constraintBottom_toTopOf="@id/textAbout"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"/>

	<TextView
		android:id="@+id/textAbout"
		style="@style/TextOverline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login_button_about_app"
		android:layout_marginEnd="12dp"
		app:layout_constraintHorizontal_chainStyle="packed"
		android:layout_marginBottom="64dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@id/labelDotDivider"
		app:layout_constraintStart_toStartOf="parent"/>

	<TextView
		android:id="@+id/labelDotDivider"
		style="@style/TextOverline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login_button_dot_divider"
		android:layout_marginBottom="64dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toEndOf="@id/textAbout"
		app:layout_constraintEnd_toStartOf="@id/textPrivacyPolicy"/>

	<TextView
		android:id="@+id/textPrivacyPolicy"
		style="@style/TextOverline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login_button_privacy_policy"
		android:layout_marginStart="12dp"
		android:layout_marginBottom="64dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/labelDotDivider"/>

</androidx.constraintlayout.widget.ConstraintLayout>