<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/BaseAppToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/iconBack"
                style="@style/BaseImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_back_24"
                android:tint="@color/orange500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelToolbar"
                style="@style/TextToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/labelAppName"
                style="@style/TextHeadline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="@font/lato_bold"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/labelDesc"
                style="@style/TextBodySmallRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_desc"
                android:layout_marginTop="24dp"
                android:lineSpacingExtra="6dp"
                app:layout_constraintTop_toBottomOf="@id/labelAppName"/>

            <TextView
                android:id="@+id/labelDataSource"
                style="@style/TextBodySmallRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_data_source"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelDesc"/>

            <TextView
                android:id="@+id/labelDataSourceValue"
                style="@style/TextBodySmallRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_data_source_value"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:layout_marginTop="24dp"
                android:textColor="@color/green500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelDesc"/>

            <TextView
                android:id="@+id/labelDiplomaThesis"
                style="@style/TextBodySmallRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_diploma_thesis"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelDataSource"/>

            <TextView
                android:id="@+id/labelDiplomaThesisValue"
                style="@style/TextBodySmallRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_diploma_thesis_value"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/green500"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelDataSource"/>

            <TextView
                android:id="@+id/labelAuthor"
                style="@style/TextBodySmallRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_author"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelDiplomaThesis"/>

            <TextView
                android:id="@+id/labelAuthorValue"
                style="@style/TextBodySmallRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_author_value"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/green500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelDiplomaThesis"/>

            <TextView
                android:id="@+id/labelContact"
                style="@style/TextBodySmallRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_contact"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelAuthor"/>

            <TextView
                android:id="@+id/labelContactValue"
                style="@style/TextBodySmallRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_contact_value"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/green500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelAuthor"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
